--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -45,21 +45,26 @@ We shall argue that fully answering this question involves appeal to structures 
 By contrast, 
 most philosophers and many (but not all) psychologists appear to assume that this question can be fully answered just in terms of a special kind of intention or structure of intention and knowledge often called a shared (or `collective') intention.
 On this widely held view, for an event to be a joint action is for it to be appropriately related to a shared intention.
-For comparison, in the case of ordinary, individual action 
-one might hold that for an event to be an action is for it to be appropriately related to an intention.
-This assumption immediately raises the question of what shared intention is.
-On this question several philosophers offer competing theories.
-It is striking, however, that few have challenged the assumption that for an event to be a joint action it must be appropriately related to a shared intention.
-This is striking because the parallel assumption about ordinary, individual action is not as widely held among leading theorists.
-On several leading views, there could be agents whose actions are purposive---and, in some cases, even intentional---even though the agents have no intentions.
+This view is analogous to the view that, in the case of ordinary, individual action, 
+ for an event to be an action is for it to be appropriately related to an intention.
+
+Few have argued for, or objected to, 
+the view that for an event to be a joint action it must be appropriately related to a shared intention.
+This is striking because the parallel assumption about ordinary, individual action is not as widely held among leading theorists.%
+\footnote{
+For instance, \citet[p.\ ]{Velleman:2000fq}
+}
+In fact, some allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.%
+\footnote{
+For instance, \citet[p.\ 251]{bratman:2000_valuing} % = \citep[p.\ 51]{Bratman:2007bd}
+describes an agent called `Creature 2' who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally'.
+
+}
 If any such view is correct, it is impossible to fully explain what it is for an event to be an action by appeal to intention alone.
-Our aim is to defend a parallel claim about joint action.
-More specifically, we shall defend these claims: 
-first, 
-that fully explaining which events are joint actions requires appeal to structures of motor representation and not only to shared intention;
-and, 
-second, 
-that recognising a constitutive role for motor representation in joint action makes possible an account of shared intention which is simpler and more elegant than any of the leading alternatives.
+Our aim is to provide material for a parallel view about joint action.
+We shall offer considerations in favour of two claims: 
+First, fully explaining which events are joint actions requires appeal to structures of motor representation and not only to shared intention.
+And, second, recognising a constitutive role for motor representation in joint action makes possible an account of shared intention which is simpler and more elegant than any of the leading alternatives.
 
 
 
@@ -199,13 +204,13 @@ The question is what singles out the outcome or outcomes, actual or merely possi
 This question is closely related to a second.
 Ordinary purposive actions are sometimes composed of more than one motor action.  My swinging Isabel around includes my reaching for her wrists, grasping them and then spinning us around.  
 But  my action doesn’t include other things which I might be doing simultaneously, like refusing a cup of tea with my eyes or  trying to determine whether that smell is coming from Isabel’s sister Hannah’s nappy.
-The second question, then, is this: for a particular action directed to a specified goal, what determines which activities%
+The second question, then, is this: For a particular action directed to a specified goal, what determines which activities%
 \footnote{
 As we use the term `activities',
 all actions are activities 
 and so are  things like reaching and grasping.
 This should make it clear that our position does not depend on whether or not reachings and the like are  actions.
-} comprise the purposive action and which do not.
+} comprise the purposive action and which do not?
 
 
 The standard answer to both questions involves intention.
@@ -228,7 +233,8 @@ should also accept that a similar story about purposive action and motor represe
 Given that the two basic questions about ordinary, individual purposive action can also be answered by appeal to intention,
 they can also be answering by appeal to motor representation.
 This motivates the following view.
-Not all purposive actions are bound together and linked to outcomes by intentions: in some cases what binds together purposive actions and links them to outcomes are motor representations.
+Not all purposive actions are bound together and linked to outcomes by intentions. 
+In some cases what binds together purposive actions and links them to outcomes are motor representations.
 %In some cases, the purposiveness of an action is grounded in a motor representation of an outcome; in other cases it is grounded in an intention.
 And of course in many cases it may be that both intention and motor representation are involved.
 
@@ -310,19 +316,23 @@ To see a parallel with the first condition, (1), recall two (empirical) claims o
 First, some motor representations represent outcomes.
 Second, some motor representations represent the outcomes of actions not all of whose components will be executed by the agent whose motor representation it is.
 Given these claims, there is a direct parallel with Bratman's first condition, (1).
-In the case of social motor representation, each agent represents the outcome: but it is represented motorically rather than by having an intention.
-% (in our earlier example, this was the movement of the object).
+Where some agents have either a shared intention or a social motor representation, there is an outcome to which their actions are directed and each agent represents this outcome.
+Of course there is also a difference: In the case of social motor representation, the outcome is represented motorically and need not feature in the content of any intention.%
+\footnote{
+Here and below were are assuming that no motor representations are intentions. 
+If this assumption is wrong (as \citealp{pacherie:2008_action} suggests), social motor representation may be even more closely related to shared intention that we suggest here.
+}
 
 
 Concerning the second condition, (2), there is clearly no {direct} parallel. 
 Whereas one intention can be about another intention, 
 we assume that one motor representation cannot be about another motor representation.
-But we do think there is a parallel of sorts. 
+But there is a parallel of sorts. 
 A function of the second condition, (2), is to ensure meshing of subplans. 
-Each agent's having a motor representation of the outcome to which their joint action is directed does ensure meshing of subplans.
+Each agent's having a motor representation of the outcome to which all their actions are together directed does ensure meshing of subplans.
 What ensures this meshing is not the fact that each agent represents the other's plans {as the other's plans}.
-Rather in the case where joint action is grounded in social motor representation, what ensures meshing of subplans is this:
-each agent plans all of the agents' actions, and the agents rely on planning strategies that are sufficiently similar to ensure meshing subplans.
+Rather what ensures meshing of subplans is this:
+Each agent plans all of the agents' actions, and the agents rely on planning strategies that are sufficiently similar to ensure meshing subplans.
 
 
 The third condition, (3), concerns common knowledge.
@@ -345,21 +355,29 @@ Instead, what is required is this.
 There should be a good chance---good relative to the potential costs and benefits of attempting this particular joint action now---that social motor representation will provide the necessary coordination.
 Of course this could be guaranteed by common knowledge. 
 But common knowledge is not required.
-Alternatively it can be ensured by common planning processes and a common {background} of dispositions, habits and expectations. 
+Alternatively it can be ensured by common planning processes and a common {background} of dispositions, habits and expectations.%
+\footnote{
+Another possible line of justification for a common knowledge component of shared intention might start from Davidson's claim that
+`[a]ction does require that what the agent does is intentional under some description, and this in turn requires ...\ that what the agent does is known to him under some description' \citep[p.\ 50]{Davidson:1971fz}.
+If we accepted this claim, then it seems we might have to conclude that not all joint actions are actions. 
+While this may appear to be an obstacle to accepting our view, there is an independent reason for thinking that not all joint actions are actions.
+For if we also follow Davidson in accepting that all actions are bodily movements (or Hornsby in accepting that all actions are tryings), it turns out that few paradigm cases of joint action are actions.
+For instance, we might paint a house together or make a hollandaise sauce together without there being any bodily movements of which we are both agents.
+} 
 %common background is for reciprocity of motor representation and similar willingness to engage in joint action.
 
-If, as we have just argued, social motor representations play a role analogous to the structure of intentions and knowledge which Bratman identifies as sufficient for shared intention, then this is a  (non-decisive)  reason to think that motor representations can ground the purposiveness of joint action.
+If, as we have just argued, social motor representations play a role analogous to the structure of intentions and knowledge which Bratman identifies as sufficient for shared intention, then this is a  (non-decisive)  reason to think that motor representations can ground the purposiveness of a joint action.
 
 
 
-\section{Social motor representation: unlike shared intention}
+\section{Joint action without shared intention}
 Our opening question was, Which events are joint actions?
 The standard view is that for an event to be a joint action it must be appropriately related to a shared intention.
 We are in the process of arguing that this is not the whole truth about joint action,
-and that some events are joint actions by virtue of being appropriately related to a structure of motor representations---social motor representations.
+and that some events are joint actions by virtue of being appropriately related to a structure of motor representations we call social motor representation.
 We don’t mean to suggest that all joint actions involve social motor representation.
-The picture we are aiming to establish is rather this: some but not all joint actions involve shared intention; some but not all joint actions involve social motor representation; and there could be joint actions which involve social motor representation but not shared intention.
-This is why in our view 
+The view we are aiming to establish is rather this: Some but not all joint actions involve social motor representation; and there could be joint actions which involve social motor representation but not shared intention.
+This is why 
 %Recap: the question was: Does social motor representation  play a role in explaining what joint is?
 %I have just been arguing for a positive answer.
 %My thesis is this:
@@ -368,104 +386,63 @@ This is why in our view
 %This is why I think that 
 fully understanding what joint action is requires understanding the coordinating role of social motor representation and not only understanding shared intention.
 
-***HERE
-***Two lines of objection:
-(1) all joint actions involve share intention
-(2) social motor representation is just a species of shared intention (have just been filling in some details of how shared intentions are realised).
 
-But, equally, \emph{there could be purposive joint actions which do not involve shared intentions},
-just as there can be purposive actions which do not involve intentions at all.
-Let me go slowly in explaining why I think there could be joint action without shared intention and start by returning to the case of ordinary, individual action.
+%*Two lines of objection:
+%(1) all joint actions involve share intention [here]
+%(2) social motor representation is just a species of shared intention (have just been filling in some details of how shared intentions are realised). [later]
+We are some way off having argued for this view.
+One consequence of our view is that there could be joint actions without shared intention. 
+But this does not straightforwardly follow from the claim we have argued for, namely that social motor representation is involved in some joint actions.
+And it also goes against a widely held view.
+To focus on just one case, Alonso says `the key property of joint action lies in its internal component [...] in the participants' having a ``collective'' or ``shared'' intention' \citep[pp.\ 444-5]{alonso_shared_2009}.%
+\footnote{
+***others
+}
+%Now for all we have said so far, 
+%someone might allow that, as we have argued, social motor representation is involved in some joint actions 
+%but also insist that all joint actions involve shared intention.
+If this were right, it would be false or at least unclear that social motor representation is needed to answer the question about which events are joint actions.
+We must therefore defend the view that joint action need not involve shared intention.
 
-
-
-
-\section{Slide}
-So what are intentions for?
-
-I’m going to assume that intentions are something over and above basic beliefs and desires; that an intention is not, for instance, merely a strongest desire or, as Donald Davidson held at an early stage of his thinking, merely a belief-desire pair.
-Intention involves more than this.
-
-There is a temptation to assume that intention is involved in every case of purposive action.
-But it’s hard to see what the argument for this assumption could be.
-In many cases it seems that beliefs, desires and motor representations are all that is needed to explain purposive action. 
-You offer me a biscuit.  I want one, and I believe I can get one by reaching out for it.  So I do reach for it.  As far as I can see, there’s no need to suppose that, in addition to the belief and desire, it must be the case that I also intend to take a biscuit.  
-(At least not unless we take ‘intention’ to mean ‘strongest desire’, which it does not.)  
-Maybe I do intend this.  
-But it’s possible for an agent to take and eat a biscuit, and to do so purposively, without having any intentions at all.  
-Beliefs, desires and motor representations are sufficient.
-
-So if we don't need intentions merely to perform a purposive action, what are intentions for?
-
-
-
-\section{Slide}
-This question becomes more pressing if you consider that motor representations enable quite sophisticated planning over short periods of time and sequences of action; for example, how you grasp a pointer will depend on what you are about to do with it \citep{zhang:2007_planning}.
-
-This sort of planning does not need intentions at all.  So (again) what are intentions for?
-
-
-
-\section{Slide}
-Michael Bratman suggests that 
-\emph{Intentions are for planning multiple separate actions over longer periods of time; and for planning multiple separate actions whose execution is mutually constraining where the outcomes cannot be represented motorically.}
-
-This is a case where intentions are really needed [see figure in slide] --- here one can’t act on strongest desire (for the big reward) if want to maximise rewards by collecting the small and the large reward.
-And one can’t rely on motor representation because the motor system doesn’t care about things that cannot be represented in motor terms.
-
-I don't think, of course, that intentions are only involved in actions which require planning of this sort.
-But I do think it's only in such actions that absolutely require intentions.
-
-Not all purposive actions involve any planning of this sort. 
-
-Now you could imagine a two-person version of this task where we are rewarded for what we collectively achieve.  In this case it’s optimal if one of us goes for the small reward and the other goes for the large reward.  I think it’s this kind of planning that shared intention is really for.
-
-
-
-\section{Slide}
-By contrast, in many ordinary cases of joint action there is no need for planning of this sort and so no need for shared intention.  Actions such as these \emph{might} involve shared intention but they do not \emph{necessarily} involve shared intention.
-
-I’m suggesting that some joint actions---like the one two people move an object in a way that involves passing it between them---don’t require this kind of planning and so don’t necessarily involve shared intentions.
-In some cases, social motor representation alone is sufficient for purposive joint action.
-
-
-
-\section{Slide}
-This goes against a widely shared view in the literature
-
-
-
-\section{Slide}
-To focus on just one case, Alonso says ‘the key property of joint action lies in its internal component [...] in the participants’ having a “collective” or “shared” intention.’ \citep[pp.\ 444-5]{alonso_shared_2009}
-
-I want to spend a bit of time on this claim because it matters for my second theme, which is a problem concerning how motor representation and shared intention interface in joint action.
-
-As far as I know, this claim is not explicitly argued for.  From conversation with philosophers I think the central argument hinges on  contrast cases.
-Contrast cases are pairs of actions which are similar in terms of behaviour and coordination but where one is joint but the other isn’t....
-
-
-
-\section{Slide}
-[nothing]
-
-
-\section{Slide}
-[Gilbert's Jack and Sue walking together case]
-
-
-\section{Slide}
-[Searle's park vistor contrast case]
-
+As far as we know, the claim that all joint action involves shared intention is not explicitly argued for.  
+The best argument we know of hinges on so-called contrast cases.
+Contrast cases are pairs of actions which are similar in terms of behaviour and coordination but where one is joint but the other isn't.  
+\citet{gilbert_walking_1990} contrasts two people walking together with two people individually walking side by side.  
+The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together is a joint action whereas merely walking side by side is not. 
+Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first is a case of joint action, the second is not; but the same movements occur in both.  
 These sorts of contrast case invite the question, 
-How do joint actions differ from individual actions which may occur in parallel? 
-What is the difference between Jack and Sue walking together and their walking side-by-side?  
-Gilbert’s example shows that the difference can’t just be a matter of coordination, because people merely walking alongside each other also need to coordinate their actions in order to avoid colliding with each other.  
+How do joint actions differ from individual but parallel actions? 
+Gilbert’s example shows that the difference can’t just be a matter of coordination, because people who are merely walking alongside each other also need to coordinate their actions in order to avoid colliding.  
 And Searle’s example shows that the difference between joint action and parallel individual action can’t just be that the actions have a common effect because merely parallel actions can have common effects too. 
 
-How might this lead someone to think that all joint action involves shared intention?
-I think the idea is supposed to be this.
-One difference between the genuinely joint actions and their merely parallel counterparts is that the genuinely joint actions involve shared intentions.
-And there is no further difference that enables one systematically to distinguish the two cases.
+How could the contrast cases be used to argue that all joint action involves shared intention?
+The argument rests on this premise:
+It is possible to distinguish systematically between the contrast cases by appeal to shared intention and only by appeal to shared intention.
+To defeat this argument we shall show that there is another, more general way to distinguish contrast cases.
+
+Take Searle's example of several people running to the shelter.  
+In the joint case, there is a single outcome to which each person's actions is individually directed, namely their collective arrival at the shelter.  
+In the contrasting individual case, where park visitors individually run to the shelter to escape a storm, there is no single outcome to which each of their actions is individually directed.  
+Instead each visitor's actions are directed to that visitor's own arrival at the shelter.  
+Similarly, turning to Gilbert's example, when two people walk together, there is a single outcome to which both of their actions are individually directed (their collective arrival at a corner, say); whereas when two people merely walk side by side there is no single outcome to which each agent's actions are directed.  
+In general, where two or more agent's actions constitute a joint action, there is an outcome to which each agent's actions are individually directed such that it is possible for them all to succeed relative to this outcome.%
+\footnote{
+Some readers may be sceptical of this claim.
+But note that it is a consequence of the view we are opposing, the view that all joint actions involve shared intention.
+Or, rather, it is a consequence of this view given a further premise which is a consequence of any standard account of shared intention: Where several agents act on a shared intention that they J, 
+each will perform an action directed to J and it is possible for them all to succeed in J-ing.
+} 
+Since this is not true in the contrasting cases of non-joint action, it allows us to distinguish systematically between joint actions and their non-joint but behaviourally and coordinatively indistinguishable counterparts.  
+
+For concision let us stipulate that an outcome is a \emph{distributive goal} of two or more agents' actions just if two conditions are met.
+First, this outcome is a goal to which each agent's actions are individually directed.
+Second, each agent's actions are related to the goal in such a way that it is possible for all the agents (not just any agent, all of them together) to succeed relative to this goal.
+Let us also say that a structure is \emph{something like shared intention} if it stands to joint action roughly as intention stands to ordinary, individual action.  
+In these terms, our claim is that joint actions involve distributive goals and that this distinguishes joint actions from non-joint actions in the standard contrast cases.  
+Given that the existence of a distributive goal need involve nothing like a shared intention, we can conclude that systematically distinguishing between the contrast cases does not require anything like shared intention.
+ 
+
+
 
 I think this argument is mistaken for two reasons.
 
@@ -684,6 +661,50 @@ And this suggestion has two consequences.
 One is that we cannot properly understand what joint action is if we focus only on shared intention.
 The other is that we face a challenge.
 The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective joint action despite not being inferentially integrated in practical reasoning.
+
+
+\section{***CUT}
+So what are intentions for?
+
+Let us to assume that intentions are something over and above basic beliefs and desires; that an intention is not, for instance, merely a strongest desire or, as Donald Davidson held at an early stage of his thinking, merely a belief-desire pair.
+Intention involves more than this.
+
+There is a temptation to assume that intention is involved in every case of purposive action.
+But it’s hard to see what the argument for this assumption could be.
+In many cases it seems that beliefs, desires and motor representations are all that is needed to explain purposive action. 
+You offer me a biscuit.  I want one, and I believe I can get one by reaching out for it.  So I do reach for it.  As far as I can see, there’s no need to suppose that, in addition to the belief and desire, it must be the case that I also intend to take a biscuit.  
+(At least not unless we take ‘intention’ to mean ‘strongest desire’, which it does not.)  
+Maybe I do intend this.  
+But it’s possible for an agent to take and eat a biscuit, and to do so purposively, without having any intentions at all.  
+Beliefs, desires and motor representations are sufficient.
+
+So if we don't need intentions merely to perform a purposive action, what are intentions for?
+
+This question becomes more pressing if you consider that motor representations enable quite sophisticated planning over short periods of time and sequences of action; for example, how you grasp a pointer will depend on what you are about to do with it \citep{zhang:2007_planning}.
+
+This sort of planning does not need intentions at all.  So (again) what are intentions for?
+
+
+ Bratman suggests that 
+\emph{Intentions are for planning multiple separate actions over longer periods of time; and for planning multiple separate actions whose execution is mutually constraining where the outcomes cannot be represented motorically.}
+
+This is a case where intentions are really needed [see figure in slide] --- here one can’t act on strongest desire (for the big reward) if want to maximise rewards by collecting the small and the large reward.
+And one can’t rely on motor representation because the motor system doesn’t care about things that cannot be represented in motor terms.
+
+I don't think, of course, that intentions are only involved in actions which require planning of this sort.
+But I do think it's only in such actions that absolutely require intentions.
+
+Not all purposive actions involve any planning of this sort. 
+
+Now you could imagine a two-person version of this task where we are rewarded for what we collectively achieve.  In this case it’s optimal if one of us goes for the small reward and the other goes for the large reward.  I think it’s this kind of planning that shared intention is really for.
+
+
+By contrast, in many ordinary cases of joint action there is no need for planning of this sort and so no need for shared intention.  Actions such as these \emph{might} involve shared intention but they do not \emph{necessarily} involve shared intention.
+
+We are suggesting that some joint actions---like the one two people move an object in a way that involves passing it between them---don’t require this kind of planning and so don’t necessarily involve shared intentions.
+In some cases, social motor representation alone is sufficient for purposive joint action.
+
+
 
 
 \bibliography{$HOME/endnote/phd_biblio}
