just about to change the contrast cases section

--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -43,29 +43,46 @@ and we argue that social motor representation and shared intention  have distinc
 Which events are joint actions?
 We shall argue that fully answering this question involves appeal to structures of motor representation.
 By contrast, 
-most philosophers and many (but not all) psychologists appear to assume that this question can be fully answered just in terms of a special kind of intention or structure of intention and knowledge often called a shared (or `collective') intention.
+most philosophers and many (but not all) psychologists appear to assume that this question can be fully answered just in terms of a special kind of intention or structure of intention, knowledge and committment often called a shared (or `collective') intention.
 On this widely held view, for an event to be a joint action is for it to be appropriately related to a shared intention.
 This view is analogous to the view that, in the case of ordinary, individual action, 
  for an event to be an action is for it to be appropriately related to an intention.
 
 Few have argued for, or objected to, 
-the view that for an event to be a joint action it must be appropriately related to a shared intention.
-This is striking because the parallel assumption about ordinary, individual action is not as widely held among leading theorists.%
-\footnote{
-For instance, \citet[p.\ ]{Velleman:2000fq}
-}
+the view that for an event to be a joint action is for it to be appropriately related to a shared intention.
+This is striking because the parallel assumption about ordinary, individual action is not universally accepted. 
 In fact, some allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.%
 \footnote{
 For instance, \citet[p.\ 251]{bratman:2000_valuing} % = \citep[p.\ 51]{Bratman:2007bd}
 describes an agent called `Creature 2' who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally'.
-
 }
+And others have argued that motor representation and intention are both needed in explaining which events are ordinary, individual actions \citep{butterfill:2012_intention}.
 If any such view is correct, it is impossible to fully explain what it is for an event to be an action by appeal to intention alone.
 Our aim is to provide material for a parallel view about joint action.
 We shall offer considerations in favour of two claims: 
 First, fully explaining which events are joint actions requires appeal to structures of motor representation and not only to shared intention.
+%***what's the argument for this second claim!?
 And, second, recognising a constitutive role for motor representation in joint action makes possible an account of shared intention which is simpler and more elegant than any of the leading alternatives.
 
+Note that the main claims of this paper are arguably consistent  with the claim that for an event to be an action is for it to be appropriately related to an intention.
+This is because it is possible to reject the claim that joint actions are actions. 
+Indeed, \citet[p.\ 376]{ludwig_collective_2007} has offered an independent reason to reject this claim.
+Suppose we accept, following \citet[pp.\ 49, 59]{Davidson:1971fz}, that all actions are bodily movements.
+Or suppose we follow \citet{hornsby_actions_1980} in holding that actions are tryings. 
+Then it turns out that few or no paradigm cases of joint action are actions.
+In making the sauce, one agent stirs while the other pours;
+in painting the house, one covers the outside while the other does the inside; 
+and in walking together each walker moves her own legs.
+In each of these supposedly paradigm cases of joint action, as in many others, no bodily movements which are actions (and no tryings) need have two or more agents.
+Apparently, then, joint actions are not actions. 
+This raises the possibility that the ingredients involved in explaining which events are actions differ from those involved in explaining which events are joint actions.
+Ludwig's observation on joint actions not being actions 
+also suggests, more generally, that caution is needed in generalising claims about ordinary, individual action to include joint action. 
+Although we shall draw parallels between individual and joint action, such parallels will serve merely exegetical ends.
+
+In what follows we aim to extend and generalise existing theories, not to replace them.
+We take for granted that some notion of shared intention is needed for explaining which events are joint actions. 
+Our aim is only to show that additional ingredients are needed by characterising one such ingredient.
 
 
 \section{Social motor representation}
@@ -188,7 +205,7 @@ So far we have only been considering a possible role for social motor representa
 Our primary concern, though, is with what joint action is.
 The details of how 
 social motor representation enables joint action
- already give us grounds for holding that motor representation has a role to play in explaining what joint action is.
+ already give us grounds for holding that motor representation has a role to play in explaining which events are joint actions.
 To see why,
 let’s go back to individual action for a moment again.
 
@@ -284,7 +301,7 @@ So social motor representation can bind together the activities comprising a joi
 What we are suggesting is very simple.
 Given the correctness of a standard view about shared intention in joint action, 
 and 
-given that in ordinary, individual action, motor representations and bind together activities and link them to outcomes,
+given that in ordinary, individual action, motor representations  bind together activities and link them to outcomes,
 it is plausible that 
 in joint action, several agents' activities can be bound together and linked to an outcome by social motor representation.
 That is,
@@ -357,26 +374,37 @@ Of course this could be guaranteed by common knowledge.
 But common knowledge is not required.
 Alternatively it can be ensured by common planning processes and a common {background} of dispositions, habits and expectations.%
 \footnote{
-Another possible line of justification for a common knowledge component of shared intention might start from Davidson's claim that
-`[a]ction does require that what the agent does is intentional under some description, and this in turn requires ...\ that what the agent does is known to him under some description' \citep[p.\ 50]{Davidson:1971fz}.
-If we accepted this claim, then it seems we might have to conclude that not all joint actions are actions. 
-While this may appear to be an obstacle to accepting our view, there is an independent reason for thinking that not all joint actions are actions.
-For if we also follow Davidson in accepting that all actions are bodily movements (or Hornsby in accepting that all actions are tryings), it turns out that few paradigm cases of joint action are actions.
-For instance, we might paint a house together or make a hollandaise sauce together without there being any bodily movements of which we are both agents.
+Another possible line of justification the claim that common knowledge is involved in shared intention might start from a generalisation of Davidson's claim that
+`[a]ction does require %that what the agent does is intentional under some description, and this in turn requires 
+...\ that what the agent does is known to him under some description' \citep[p.\ 50]{Davidson:1971fz}.
+%If we accepted this claim, then it seems we might have to conclude that not all joint actions are actions. 
+%While this may appear to be an obstacle to accepting our view, there is an independent reason for thinking that not all joint actions are actions.
+%For if we also follow Davidson in accepting that all actions are bodily movements (or Hornsby in accepting that all actions are tryings), it turns out that few paradigm cases of joint action are actions.
+%For instance, we might paint a house together or make a hollandaise sauce together without there being any bodily movements of which we are both agents.
 } 
 %common background is for reciprocity of motor representation and similar willingness to engage in joint action.
 
 If, as we have just argued, social motor representations play a role analogous to the structure of intentions and knowledge which Bratman identifies as sufficient for shared intention, then this is a  (non-decisive)  reason to think that motor representations can ground the purposiveness of a joint action.
 
 
+\section{The Contrast Cases}
 
-\section{Joint action without shared intention}
+
+\section{Social motor representation: unlike shared intention}
+
+*function (not to coordinate planning in Bratman's sense)
+
+*format (based on earlier paper ...)
+
+
+
+\section{***Joint action without shared intention}
 Our opening question was, Which events are joint actions?
 The standard view is that for an event to be a joint action it must be appropriately related to a shared intention.
 We are in the process of arguing that this is not the whole truth about joint action,
 and that some events are joint actions by virtue of being appropriately related to a structure of motor representations we call social motor representation.
 We don’t mean to suggest that all joint actions involve social motor representation.
-The view we are aiming to establish is rather this: Some but not all joint actions involve social motor representation; and there could be joint actions which involve social motor representation but not shared intention.
+The view we are aiming to establish is rather this: Some joint actions involve social motor representation; and there could be joint actions which involve social motor representation but not shared intention.
 This is why 
 %Recap: the question was: Does social motor representation  play a role in explaining what joint is?
 %I have just been arguing for a positive answer.
